--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sanitize-html": "^2.12.1",
+    "validator": "^13.11.0"
   }
 }
